# weapons

./: API.md  Cargo.toml  README.md  init.sql
scripts/: test_api.sh  test_categories.sh  test_items.sh  test_tags.sh
src/: db.rs  error.rs  main.rs  prelude.rs
src/_core/: curd.rs  db.rs  dir.rs  error.rs  jwt.rs  logger.rs  mod.rs
src/_indexes/: mod.rs  notes_index.rs
src/categories/: mod.rs  models.rs  routes.rs  schemas.rs  services.rs
src/items/: mod.rs  models.rs
src/models/: items.rs  mod.rs  tags.rs  users.rs
src/routes/: users.rs
src/schemas/: users.rs
src/services/: users.rs
src/tags/: mod.rs  models.rs  routes.rs  schemas.rs  services.rs
src/users/: mod.rs  models.rs  routes.rs  schemas.rs  services.rs
