[package]
name = "weapons"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
surrealdb = {version = "2.0.4", features=["kv-rocksdb"]}
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tracing-appender = "0.2.3"
chrono = "0.4.38"
tantivy = "0.25.0"
jsonwebtoken = "9.3.0"
futures-util = "0.3.30"
dotenvy = "0.15.7"
